prometheus/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
  - name: kserve-ingress-gateway
    namespace: kserve

  hostnames:
  - prometheus.llm.bearingpoint.com

  rules:
  - backendRefs:
    - name: monitoring-kube-prometheus-prometheus
      port: 9090
      weight: 1
